# YUVtoHEVC

./: CMakeLists.txt  main.c
